[package]
name = "emadocs-compiler"
version = "1.0.0"
edition = "2021"
authors = ["Emadocs Framework Team"]
description = "High-performance compiler for EmadocsLang (.ema files)"
license = "MIT"
repository = "https://github.com/emadocs/framework"
keywords = ["emadocs", "compiler", "web", "framework"]
categories = ["web-programming", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.0"
regex = "1.0"
walkdir = "2.0"
glob = "0.3"
syntect = "5.0"
pulldown-cmark = "0.9"
handlebars = "4.0"
minifier = "0.0.12"
sourcemap = "6.0"
swc_common = "0.30"
swc_ecma_ast = "0.30"
swc_ecma_parser = "0.30"
swc_ecma_codegen = "0.30"
swc_ecma_transforms = "0.30"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "emadocs-compiler"
path = "emadocs-compiler.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
